
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "mogu-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
image       = "0.25.9"
mogu        = { path = "./mogu" }
napi        = "3.0.0"
napi-derive = "3.0.0"
ndarray     = "0.16.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
